k8/middleware.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: scheduler-strip-prefix
  namespace: xykine
spec:
  stripPrefix:
    prefixes:
      - /scheduler
