k8/deploy-civo.yml
# deployment.yaml
#apiVersion: apps/v1
#kind: Deployment
#metadata:
#  name: scheduler-ui
#  labels:
#    app: scheduler-ui
#spec:
#  replicas: 1  # Number of pods
#  selector:
#    matchLabels:
#      app: scheduler-ui
#  template:
#    metadata:
#      labels:
#        app: scheduler-ui
#    spec:
#      containers:
#        - name: scheduler-ui
#          image: kacytunde/payroll-ui:2.5
#          ports:
#            - containerPort: 3000
#          env:
#            - name: PORT
#              value: "3000"

#apiVersion: apps/v1
#kind: Deployment
#metadata:
#  name: nginx-deployment
#spec:
#  replicas: 1
#  selector:
#    matchLabels:
#      app: nginx
#  template:
#    metadata:
#      labels:
#        app: nginx
#    spec:
#      containers:
#        - name: nginx
#          image: kacytunde/scheduler-ui:latest
#          ports:
#            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: scheduler-service
spec:
  selector:
    app: scheduler-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: edge-service
spec:
  selector:
    app: edge-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9000
  type: ClusterIP

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-schedule-prefix
spec:
  stripPrefix:
    prefixes:
      - /schedule
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: payroll-ingressroute
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`xykinehrs.com`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: edge-service
          port: 80

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: scheduler-ingressroute
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`kacytunde.com`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: schedule-service
          port: 80
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: nginx-ingress
#  annotations:
#    traefik.ingress.kubernetes.io/router.entrypoints: web
#spec:
#  rules:
#    - host: xykinehrs.com
#      http:
#        paths:
#          - path: /
#            pathType: Prefix
#            backend:
#              service:
#                name: nginx-ingress
#                port:
#                  number: 80
#          - path: /schedule
#            pathType: Prefix
#            backend:
#                service:
#                  name: scheduler-service
#                  port:
#                    number: 80
